--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
         {{ content }}
     </div>
-
+    <script id="dsq-count-scr" src="//amirothmanblog.disqus.com/count.js" async></script>
 </body>
 
 </html>
